--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>cs52.me</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        A webpage
+        <h1>A webpage</h1>
     </body>
 </html>
