--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <h1>A webpage</h1>
+        <h1>A webpage from Eric Zhang</h1>
+        <p>Hi! Welcome to my webpage for CS52</p>
+        <br/>
+        <p>I am a '20 studying computer science at Dartmouth, nice to meet you!</p>
+        <br/>
+        <img src="doggo.gif" alt="Just a doggo writing some code"/>
     </body>
 </html>
