--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <h1>A webpage from Eric Zhang</h1>
-        <p>Hi! Welcome to my webpage for CS52</p>
-        <br/>
+        <p>Hi! Welcome to <i>my webpage</i> for CS52</p>
         <p>I am a '20 studying computer science at Dartmouth, nice to meet you!</p>
         <br/>
         <img src="doggo.gif" alt="Just a doggo writing some code"/>
