--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>cs52.me</title>
+        <title>ezzhang.me</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
